# Games101

Delaunay/: CMakeLists.txt  Delaunay.hpp  Triangle.hpp  main.cpp
Delaunay/test/: CMakeLists.txt
MeshSimpler/: main.cpp
MeshSimpler/test/: CMakeLists.txt
assignments/Hw1/limengfan_Homework1/: README.md  main.cpp  rasterizer.cpp
assignments/Hw2/limengfan_Homework2/: README.md  Triangle.hpp  main.cpp  rasterizer.cpp  rasterizer.hpp
assignments/Hw3/limengfan_Homework3/: OBJ_Loader.h  README.md  Shader.hpp  Texture.hpp  Triangle.hpp  global.hpp  main.cpp  rasterizer.cpp  rasterizer.hpp
assignments/Hw4/limengfan_Homework4/: README.md  main.cpp
assignments/Hw5/limengfan_Homework5/: Light.hpp  Object.hpp  README.md  Renderer.cpp  Scene.hpp  Sphere.hpp  Triangle.hpp  Vector.hpp  global.hpp
assignments/Hw6/limengfan_Homework6/: AreaLight.hpp  BVH.cpp  BVH.hpp  Bounds3.hpp  Intersection.hpp  Light.hpp  Material.hpp  README.md  Ray.hpp  Renderer.cpp  Renderer.hpp  Scene.cpp  Scene.hpp  Sphere.hpp  Triangle.hpp  Vector.hpp  main.cpp
assignments/Hw7/limengfan_Homework7/: BVH.cpp  Bounds3.hpp  CMakeLists.txt  Intersection.hpp  Material.hpp  Object.hpp  README.md  Ray.hpp  Renderer.cpp  Renderer.hpp  Scene.cpp  (+6 more)
assignments/Hw8/: test.go
delaunay-triangulation/: CMakeLists.txt  delaunay.cpp  delaunay.h  edge.cpp  edge.h  main.cpp  triangle.cpp  triangle.h  vector2.cpp  vector2.h
limengfan_FinalProject/: README.md
limengfan_FinalProject/Delaunay/: README.md
limengfan_FinalProject/MeshSimpler/: CMakeLists.txt  MeshSimpler.hpp  ObjSimpler.hpp  README.md  main.cpp
(+16 files in other folders)
